[gd_scene load_steps=2 format=3 uid="uid://drs40ohp6qyub"]

[ext_resource type="Script" path="res://scripts/levels_menu.gd" id="1_okjps"]

[node name="levels_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 413.0
offset_top = 256.0
offset_right = 475.0
offset_bottom = 392.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="level 1" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level 1"
script = ExtResource("1_okjps")

[node name="level 2" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level 2"

[node name="level 3" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level 3"

[node name="back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/level 1" to="MarginContainer/VBoxContainer/level 1" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/level 2" to="MarginContainer/VBoxContainer/level 1" method="_on_level_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/level 3" to="MarginContainer/VBoxContainer/level 1" method="_on_level_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/back" to="MarginContainer/VBoxContainer/level 1" method="_on_back_pressed"]
